# chezmoi_modify_manager

./: .yamlfmt  Cargo.toml  Cross.toml  DESIGN_DECISIONS.md  EXAMPLES.md  LICENSE  README.md  about.hbs  about.toml  chezmoi_modify_manager.plugin.zsh  deny.toml
.chglog/: config.yml
.ci/: upd-pkgbuild.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  support_request.md
.github/workflows/: build.yml  ci.yml  lint.yml  mdbook-release.yml  mdbook.yml  release.yml  rust-clippy.yml
doc/: DESIGN_DECISIONS.md  algorithms.md  conversion.md  design_decisions.md  examples.md  for-packagers.md  migration.md  migration_2.md  migration_3.md  source_specification.md
docs/: book.toml
docs/src/: README.md  SUMMARY.md  actions.md  algorithms.md  basic_usage.md  configuration_files.md  installation.md  limitations.md  source_specification.md  transforms.md  troubleshooting.md
docs/src/dev/: design_decisions.md  packaging.md
docs/src/examples/: README.md  advanced.md  basics.md
docs/src/migration/: README.md  migration_2.md  migration_3.md
src/: add.rs  arguments.rs  config.rs  doctor.rs  lib.rs  main.rs  transforms.rs  update.rs  utils.rs
src/add/: tests.rs
src/config/: parser.rs
tests/: test_runner.py
tests/data/: .gitattributes  basics.cfg  basics.expected.ini  basics.json  basics.src.ini  basics.sys.ini  basics.tmpl  key_only.cfg  key_only.expected.ini  key_only.json  key_only.src.ini  key_only.sys.ini  key_only.tmpl  regex.cfg  regex.expected.ini  regex.src.ini  regex.sys.ini  regex.tmpl  section-ignores.expected.ini  section-ignores.src.ini  section-ignores.sys.ini  section-ignores.tmpl  set2.cfg  set2.expected.ini  set2.src.ini  set2.tmpl  set_remove.cfg  set_remove.expected.ini  set_remove.src.ini  set_remove.sys.ini  set_remove.tmpl  transform-remove.expected.ini  transform-remove.src.ini  transform-remove.sys.ini  transform-remove.tmpl  transform.cfg  transform.expected.ini  transform.src.ini  transform.tmpl
tests/integration/: data_driven.rs  main.rs
utils/: conversion.sh
